# BraccioVisualAttention

./: README.md
braccio_gaze_control/: CMakeLists.txt  braccio_gaze_controller.py  braccio_gaze_server.py  package.xml  setup.py
environment_analysis/: AsyncPeriodicRunner.hpp  Braccio.cpp  Braccio.hpp  CMakeLists.txt  FocusMapper.cpp  FocusMapper.hpp  GaussianMap.cpp  GaussianMap.hpp  GazeDirector.cpp  GazeDirector.hpp  GazeSolver.cpp  GazeSolver.hpp  GazeVisualizer.cpp  GazeVisualizer.hpp  MapListener.cpp  MapListener_WIP.cpp  Mapper.cpp  MeshAnalyser.cpp  MeshAnalyser.hpp  MeshProjector.cpp  MeshProjector.hpp  SalientPoint.cpp  SalientPoint.hpp  SceneAnalyzer.cpp  SceneAnalyzer.hpp  SphericalMapper.cpp  SphericalMapper.hpp  braccio.urdf  map_listener.cpp  package.xml
environment_analysis/gaze_control/: braccio_gaze_controller.py  braccio_gaze_server.py
environment_analysis/gaze_control/braccio_controller/: braccio_controller.ino
environment_analysis/kinematics/: BraccioKinematics.cpp  BraccioKinematics.hpp  MatrixMath.cpp  MatrixMath.h
tf_object_detection/: CMakeLists.txt  package.xml  setup.py
tf_object_detection/msg/: DetectedObject.msg
tf_object_detection/src/object_detection/: object_detection_demo.py  object_detection_tutorial.ipynb
tf_object_detection/srv/: ObjectDetection.srv
zed-ros-wrapper/: CMakeLists.txt  package.xml
zed-ros-wrapper/launch/: zed_camera.launch
zed-ros-wrapper/msg/: Chunk.msg  Matrix4f.msg  Mesh.msg  Normal.msg  Triangle.msg  UV.msg
zed-ros-wrapper/src/: zed_spatial_mapper.cpp  zed_spatial_mapper.hpp  zed_wrapper_nodelet.cpp
zed_spatial_mapping/: CMakeLists.txt  package.xml
zed_spatial_mapping/src/: main.cpp
